--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -78,7 +78,7 @@
             <nav>
                 <ul>
                     <img class="footer-icon" src="./assets/urroshrek.png" alt="imagem de shrek urrando">
-                    <li><a href="#top">volte para o topo</a></li>
+                    <li><a href="">volte para o topo</a></li>
                     <li>história</li>
                     <li>Personagens</li>
                 </ul>
